kubernetes/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: diamonds
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: diamonds
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diamonds-deployment
  labels:
    app: diamonds
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diamonds
  template:
    metadata:
      labels:
        app: diamonds
    spec:
      containers:
      - name: diamonds
        image: diamonds:latest
        ports:
        - containerPort: 3000
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: diamonds-ingress
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /diamonds
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /diamonds
#         backend:
#           serviceName: diamonds-service
#           servicePort: 80
